# JClaw

./: .gitignore  .pre-commit-config.yaml  BUCK  CLAUDE.md  DEVOPS.md  PACKAGE  README.md  build_rpm.sh  jclaw.py  pyproject.toml
docs/: AGENT_SDK.md
if/: jclaw.thrift
prompts/: BOOTSTRAP.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md
scripts/: bootstrap_local_prod.sh  install_launchd.sh  lint.sh  run_dev.sh
skills/: README.md
src/jclaw/: __main__.py
src/jclaw/ai/: agent.py  client.py  commands.py  controller.py  prompts.py  replying.py  retrospective.py  tool_loop.py  tracing.py
src/jclaw/channel/: base.py  fake.py  telegram.py
src/jclaw/cli/: app.py
src/jclaw/core/: config.py  db.py  defaults.py  environment.py  logging.py  records.py  scheduler.py  time.py
src/jclaw/core/stores/: cron.py  email_accounts.py  memory.py  messages.py  permissions.py  traces.py  (+1 more)
src/jclaw/daemon/: launchd.py  service.py
src/jclaw/tools/: __init__.py  base.py  registry.py
src/jclaw/web/: resources.py
tests/: test_agent_commands.py  test_automation_tool.py  test_browser_tool.py  test_config.py  test_controller_contracts.py  test_daemon_service.py  test_db.py  test_email_tool.py  test_environment_catalog.py  test_environment_tool.py  test_google_auth.py  test_google_docs_client.py  test_google_docs_tool.py  test_knowledge_tool.py  test_logging.py  test_memory_tool.py  test_notion_client.py  test_notion_tool.py  test_permissions_tool.py  test_scheduler.py  test_telegram_channel.py  test_tool_registry.py  test_workspace_tool.py
web/: index.html
(+50 files in other folders)
